Reorganisation des fichiers

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,13 +1,30 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    
+    <title>Portfolio de Laure Loda | Développeuse Web et Blockchain</title>
+    <meta name="description" content="Découvrez mon portfolio de développeuse web orientée React, Express et Blockchain. Consultez mes projets et compétences techniques." />
+    <meta name="keywords" content="Développement web, React, Express, Blockchain, Développeuse web, Portfolio, JavaScript, Node.js, MongoDB" />
+    <meta name="author" content="Laure Loda" />
+    <meta name="robots" content="index, follow" />
+
+    <link rel="icon" href="/images/logo.png" />
+    <link rel="apple-touch-icon" href="/images/logo.png" />
+
+    <meta property="og:title" content="Portfolio de Laure Loda | Développeuse Web et Blockchain" />
+    <meta property="og:description" content="Découvrez mes réalisations en développement web et mes compétences en React, Express et Blockchain." />
+    <meta property="og:image" content="/images/banner.png" />
+    <meta property="og:url" content="https://mon-portfolio.com" />
+    <meta property="og:type" content="website" />
+
+    <link rel="canonical" href="https://mon-portfolio.com" />
   </head>
+
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
