--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,6 +21,7 @@
     <meta property="og:type" content="website" />
 
     <link rel="canonical" href="https://mon-portfolio.com" />
+    <link rel="preload" as="image" href="/images/logo.webp" type="image/webp" >
   </head>
 
   <body>
